# RoboMasterUIDesigner

./: .gitignore  CMakeLists.txt  README.md  gridedgraphicsview.cpp  gridedgraphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
graphics/: designergraphicsscene.cpp  designergraphicsscene.h
graphics/element/: basetextelement.cpp  basetextelement.h  ellipseelement.cpp  ellipseelement.h  ellipticalarcelement.cpp  ellipticalarcelement.h  lineelement.cpp  lineelement.h  rectangleelement.cpp  rectangleelement.h  uielement.cpp  uielement.h
graphics/event/: elementselectionevent.h  jigeditingevent.h  jighandlemoveevent.h
graphics/jig/: anchorjig.cpp  anchorjig.h  elementjig.cpp  elementjig.h  ellipticalarcjig.cpp  ellipticalarcjig.h  jighandle.cpp  jighandle.h  jighandleanchor.h  linearjig.cpp  linearjig.h  rectangularjig.cpp  rectangularjig.h
i18n/: RoboMasterUIDesigner_zh_CN.ts
project/: projectmanager.cpp  projectmanager.h
